# KuHrd_Segang

./: .gitignore  CMakeLists.txt  CMakeLists2.txt  CMake사용법.md  README.md  hello  hello.c
C/: AtoZ.c  CmakeLists.txt  a2bsum.c  alphabet  arraycompare.c  bigLetter  bigLetter.c  bubbleSorting.c  celsius2Fahr  celsius2Fahr.c  charNumber  charNumber.c  compare  compare2  dice2.c  fourbit.c  fourbit2  fourbit2.c  genderRatio  hello  increment.c  lotto.c  makefile  multiply.c  oddEven  one2TenWhileSum.c  oneToTenFor.c  oneToTenSum.c  posZeroNeg.c  quickSorting.c  scoreGrade_switch.c  sideof  star2.c  stringCopy  stringCopy.c  sumArray.c  swap.c  triangle
C/Part 1-4/: absoluteValue.c  alphabet.c  arrayAssignment.c  compare.c  compare2.c  dice.c  oddEven.c  passFail.c  pointer1.c  pointerArray.c  selectionSorting.c  star.c  sumMatrix.c  triangle.c  xstar.c
C/Part_1-4/: AtoZ  CMakeLists.txt  arrayInit.c  findMax.c  genderRatio.c  localVariable.c  one2TenWhile.c  pointer1.c  pointer2.c  pointer3.c  pointer5_functionpointer.c  pointer6_voidpointer.c  pointerArray2.c  scoreGrade.c  sideof.c
C/Part_5/: charGetPut  charGetPut.c  charGetPut2.c  charGetPut3.c  charGetPut4.c  enum.c  selfReference.c  strcpy.c  string.c  struct.c  union  union.c
C/Part_6/: dynamicAllocation.c  dynamicAllocation2.c  dynamicAllocation3.c  dynamicAllocation4.c  fileDescriptor.c  filePointer.c  variableLengrhArray.c
C/baseballGame/: CMakeLists.txt  baseballGame.c  baseballGame.h  main.c
C/bowling/: bowling  bowling.c
C/d_compile/: CMakeLists.txt  main  main.c  makefile  serial.c  serial.h
C/mosquitto/: CMakeLists.txt  mos  mos.c
C/myRandom/: CMakeLists.txt  main  main.c  myRandom.c
Cpp/test01/: Makefile  a.c  b.c  main  main.c
HonGong_Practice/: 01_045.c  01_059.c  01_060.c  01_066.c  01_068.c  01_070.c  03_093.c  03_094.c  03_104.c  03_105.c  04_117.c  04_135.c  04_136  04_136.c  05_180.c  CMakeLists.txt
atmega128/: CMakeLists.txt  avr-toolchain.cmake  flash_troubleshooting.md
atmega128/lib/uart0/: uart0.c
atmega128/src/: cds2.c  cdsfnd.c  dc_pwm_vr.c  dcmotor.c  dcpwm.c  external_eeprom.c  fnd.c  fnd2.c  i2c_tempHumi.c  interrupt1.c  lcdex.c  led2.c  led3.c  main.c  piezo.c  pir.c  pwmled.c  pwmservomotor.c  pwmservoswitch.c  switch1.c  switch2.c  switch_fnd.c  timer0led.c  timer1com.c  timer2ledleftright.c  uart1.c  uart2.c  uart3.c
cpp_code/: CMakeLists.txt  Makefile
cpp_code/C/: test  test.c
cpp_code/chap01/: 00_hello_world  00_hello_world.cpp
cpp_code/chap02/: challenge  challenge.cpp  cin.cpp  cin2.cpp  cin3.cpp  ex2_2.cpp  ex2_5.cpp
cpp_code/chap02/namespace/: Makefile  kitae.cpp  kitae.h  main.cpp  mike.cpp  mike.h
cpp_code/chap03/: 148p_01  148p_01.cpp  149p_03  149p_03.cpp  151p_07.cpp  ex3_1.cpp  ex3_2.cpp  ex3_3.cpp
cpp_code/chap04/: 209p_01.cpp  209p_02.cpp  209p_03.cpp  array  array.cpp  ex4_1.cpp  ex4_2  ex4_2.cpp  ex4_8  ex4_8.cpp
cpp_code/chap05/: 253p_ex.cpp  ex3_6  ex3_6.cpp  ex5_10.cpp  ex5_11.cpp  ex5_1_addr.cpp  ex5_1_refn.cpp  ex5_1_value.cpp  exercise_01.cpp  exercise_02.cpp  exercise_03.cpp  exercise_04.cpp  exercise_05.cpp  exercise_09.cpp  exercise_11.cpp  exercise_12.cpp
dataStructure/list/: list1.c
dataStructure/queue/: queue1.c  queue2.c
dataStructure/stack/: stack1.c  (+1 more)
pico/: CMakeLists.txt
(+21 files in other folders)
